Initially converted 3d code.

--- a/lander_WIN32/lander/lander.vcxproj.filters
+++ b/lander_WIN32/lander/lander.vcxproj.filters
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="lander.cpp" />
+    <ClCompile Include="world.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphics.h" />
