--- a/lander_WIN32/lander/lander.vcxproj
+++ b/lander_WIN32/lander/lander.vcxproj
@@ -95,6 +95,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="lander.cpp" />
+    <ClCompile Include="world.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="lander.rc" />
